trustfall_core/test_data/tests/parse_errors/invalid_transform_argument_name.parse-error.ron
Err(InvalidTransformOperandName("$10", "Transform argument names must start with an ASCII letter or underscore character: 10", Pos(
  line: 5,
  column: 44,
)))
